--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -2,14 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
         android:textSize="32sp"
         android:id="@+id/home_text"
         android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:text="@string/appDescription"
+        android:text="@string/home_text"
+        android:textColor="#000"/>
+    <TextView
+        android:textSize="24sp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/home_text2"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:text="@string/home_text2"
         android:textColor="#000"/>
 
 </LinearLayout>
