Changed colour scheme.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="green">#008000</color>
     <color name="blue">#0000FF</color>
     <color name="brown">#a5682a</color>
+    <color name="nav_background">#add8e6</color>
+    <color name="nav_tint">#000000</color>
+    <color name="nav_text">#222222</color>
+    <color name="content_background">#add8e6</color>
 </resources>
