--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/content_background">
         <include
             layout="@layout/toolbar"
             android:layout_width="match_parent"
@@ -26,7 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@android:color/white"
+        android:background="@color/nav_background"
+        app:itemIconTint="@color/nav_tint"
+        app:itemTextColor="@color/nav_text"
         app:menu="@menu/drawer_view"
         app:headerLayout="@layout/nav_header" />
 </android.support.v4.widget.DrawerLayout>
